# twitch-log-bot-ws

./: .gitignore  Cargo.toml  LICENSE  README.md  config_example.json  dev.yml  prod.yml  rustfmt.toml
.envs/: .dev
.github/workflows/: rust-ci.yml
docker/: Caddyfile  Dockerfile  deploy.md  entrypoint.sh  postgresql.conf  prometheus.yml  setup.sh  ufw.sh
docker/database/: init.sh  postgresql.conf
docker/server/: Dockerfile  entrypoint.sh  setup.sh
src/: main.rs
src/lib/: config.rs  db.rs  error.rs  event.rs  mod.rs  msg.rs  tags.rs
