[package]
name = "twitch-log-bot-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
indicatif = "0.17.8"
lazy_static = "1.4.0"
postgres = { version = "0.19.7", features = ["with-chrono-0_4"] }
regex = "1.10.3"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
tungstenite = "0.21.0"
