[package]
name = "twitch-log-bot-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debuginfo-level = 1

[dependencies]
bb8 = "0.8.3"
bb8-postgres = "0.8.1"
chrono = "0.4.38"
env_logger = "0.11.3"
indicatif = "0.17.8"
lazy_static = "1.4.0"
log = "0.4.21"
regex = "1.10.4"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
tungstenite = "0.21.0"
